--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.5",
+    "@ngxmc/datetime-picker": "^20.1.0",
     "ag-grid-angular": "^34.1.1",
     "ag-grid-community": "^34.1.1",
     "country-state-city": "^3.2.1",
     "express": "^5.1.0",
+    "flatpickr": "^4.6.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
